--- a/src/main/resources/messages/labels_en_US.properties
+++ b/src/main/resources/messages/labels_en_US.properties
@@ -15,6 +15,8 @@
 ##
 FormController.interview-file=Interview:
 FormController.introduction-file=Introduction:
+ProgressController.click-to-download=Click to Download
+ProgressController.processing-status=Processing...
 FormController.title-prompt=Enter a Title:
 FormController.file-chooser-title=Select a File
 FormController.no-file-selected=(No file has been selected)
