--- a/src/main/resources/messages/labels_en_US.properties
+++ b/src/main/resources/messages/labels_en_US.properties
@@ -7,22 +7,25 @@
 #choose-a-file=Choose a File
 #save-dialog-extension-filter-description=Audio files (*.mp3, *.wav)
 #processing-status=Processing...
-#file-done-alert-title=Your podcast episode is ready
+#
 #file-done-alert-message=Congratulations! Your podcast episode is ready. Click here to save it.
-#file-has-been-downloaded=Your file has been downloaded to {0}.
 #click-to-save-file=Save File
 #description-prompt=Enter a Description:
 ##
 FormController.interview-file=Interview:
 FormController.introduction-file=Introduction:
+ProgressController.file-has-been-downloaded=Your file has been downloaded to {0}.
 ProgressController.click-to-download=Click to Download
+ProgressController.file-done-alert-title=Save Completed
 ProgressController.processing-status=Processing...
 FormController.title-prompt=Enter a Title:
-FormController.file-chooser-title=Select a File
+ProgressController.file-chooser-title=${file-chooser-title}
 FormController.no-file-selected=(No file has been selected)
 FormController.description-prompt=Enter a Description:
 FormController.file-chooser-description=Audio (*.mp3) files
 FormController.file-prompt=Upload Files:
-FormController.choose-file=Choose a File
+
+file-chooser-title = Select a File
+choose-file=Choose a File
 ##
 ui-title=BootifulPodcast.fm Desktop Client
