--- a/src/main/resources/messages/labels_en_US.properties
+++ b/src/main/resources/messages/labels_en_US.properties
@@ -16,16 +16,15 @@ FormController.interview-file=Interview:
 FormController.introduction-file=Introduction:
 ProgressController.file-has-been-downloaded=Your file has been downloaded to {0}.
 ProgressController.click-to-download=Click to Download
-ProgressController.file-done-alert-title=Save Completed
-ProgressController.processing-status=Processing...
+file-done-alert-title=Save Completed
+processing-status=Processing...
 FormController.title-prompt=Enter a Title:
 ProgressController.file-chooser-title=${file-chooser-title}
 FormController.no-file-selected=(No file has been selected)
 FormController.description-prompt=Enter a Description:
 FormController.file-chooser-description=Audio (*.mp3) files
 FormController.file-prompt=Upload Files:
-
-file-chooser-title = Select a File
+file-chooser-title=Select a File
 choose-file=Choose a File
 ##
 ui-title=BootifulPodcast.fm Desktop Client
